--- a/swak-sample/pom.xml
+++ b/swak-sample/pom.xml
@@ -30,5 +30,9 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.asynchttpclient</groupId>
+			<artifactId>async-http-client</artifactId>
+		</dependency>
 	</dependencies>
 </project>
