--- a/swak-sample/src/main/resources/application-dev.properties
+++ b/swak-sample/src/main/resources/application-dev.properties
@@ -6,6 +6,6 @@ sharding.jdbc.datasource.names=ds
 #sharding.jdbc.datasource.ds.password=rootadmin
 
 sharding.jdbc.config.sharding.tables.t_order.actual-data-nodes=ds.t_order_$->{0..1}
-sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=id
-sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{id % 2}
-sharding.jdbc.config.sharding.tables.t_order.key-generator-column-name=id
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=ID
+sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{ID % 2}
+sharding.jdbc.config.sharding.tables.t_order.key-generator-column-name=ID
