--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<module>swak-swt</module>
 		<module>swak-package</module>
 		<module>swak-excel</module>
+		<module>swak-wechat</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.1.0.RELEASE</spring-boot.version>
@@ -168,6 +169,11 @@
 			<dependency>
 				<groupId>com.swak</groupId>
 				<artifactId>swak-motan</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.swak</groupId>
+				<artifactId>swak-wechat</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
