--- a/swak-jdbc-async/pom.xml
+++ b/swak-jdbc-async/pom.xml
@@ -16,6 +16,12 @@
 		<dependency>
 			<groupId>com.swak</groupId>
 			<artifactId>swak-kotlin</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jetbrains.kotlinx</groupId>
+					<artifactId>kotlinx-coroutines-reactor</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jasync-sql</groupId>
@@ -80,63 +86,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.github.jasync-sql</groupId>
-			<artifactId>jasync-postgresql</artifactId>
-			<version>${jasync.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-common</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-buffer</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler-proxy</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http2</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver-dns</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-epoll</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-kqueue</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 
-		<!-- 直接使用jasync 客户端 -->
+		<!-- 使用jasync 客户端 -->
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-mysql-postgresql-client-jasync</artifactId>
@@ -150,69 +101,47 @@
 					<groupId>io.vertx</groupId>
 					<artifactId>vertx-shell</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>com.github.jasync-sql</groupId>
+					<artifactId>jasync-postgresql</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.github.jasync-sql</groupId>
+					<artifactId>jasync-mysql</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
-
-		<!-- 使用 r2dbc的实现 -->
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-r2dbc</artifactId>
-			<version>1.0.0.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>io.r2dbc</groupId>
-			<artifactId>r2dbc-postgresql</artifactId>
-			<version>0.8.0.RELEASE</version>
-			<exclusions>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-common</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-buffer</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler-proxy</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http2</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver-dns</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-epoll</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-kqueue</artifactId>
-				</exclusion> 
-			</exclusions>
-		</dependency>
+		<!-- <dependency> <groupId>com.github.jasync-sql</groupId> <artifactId>jasync-postgresql</artifactId> 
+			<version>${jasync.version}</version> <exclusions> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-common</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-buffer</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-transport</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-handler</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-handler-proxy</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec-http</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec-http2</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-resolver</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-resolver-dns</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-transport-native-epoll</artifactId> </exclusion> <exclusion> 
+			<groupId>io.netty</groupId> <artifactId>netty-transport-native-kqueue</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
+		<!-- 使用 r2dbc的实现 <dependency> <groupId>org.springframework.data</groupId> 
+			<artifactId>spring-data-r2dbc</artifactId> <version>1.0.0.RELEASE</version> 
+			</dependency> <dependency> <groupId>io.r2dbc</groupId> <artifactId>r2dbc-postgresql</artifactId> 
+			<version>0.8.0.RELEASE</version> <exclusions> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-common</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-buffer</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-transport</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-handler</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-handler-proxy</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec-http</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-codec-http2</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-resolver</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-resolver-dns</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
+			<artifactId>netty-transport-native-epoll</artifactId> </exclusion> <exclusion> 
+			<groupId>io.netty</groupId> <artifactId>netty-transport-native-kqueue</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 	</dependencies>
 </project>
