--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,8 @@
 		<jcef.version>1.0</jcef.version>
 		<poi.version>4.0.1</poi.version>
 		<guava.version>21.0</guava.version>
-		<controlsfx.version>8.40.14</controlsfx.version>
+		<controlsfx.version>11.0.1</controlsfx.version>
+		<javafx.version>11.0.2</javafx.version>
 		<freemarker.version>2.3.29</freemarker.version>
 		<rabbitmq.version>5.7.3</rabbitmq.version>
 		<rocketmq.version>4.5.1</rocketmq.version>
@@ -94,7 +95,7 @@
 		<jasync.version>1.0.13</jasync.version>
 
 		<!-- other setting -->
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>13</jdk.version>
 		<maven.version>3.5.4</maven.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.version>${project.version}</project.version>
@@ -256,6 +257,7 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+					<release>${jdk.version}</release>
 					<encoding>${project.build.sourceEncoding}</encoding>
 					<compilerArgs>
 						<arg>-XDignore.symbol.file</arg>
@@ -266,7 +268,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
@@ -274,7 +275,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.0</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
